Fix horizontal scrollbar showing up due to 100vw

--- a/src/style.styl
+++ b/src/style.styl
@@ -13,7 +13,7 @@ html
   box-sizing inherit
 
 #splash
-  width 100vw
+  width 100%
   min-height 100vh
   background black
   display flex
